syntax = "proto3";

option csharp_namespace = "Larp.Proto";

package larp;

message Game {
  string game_id = 1;
  string title = 2;
  string description = 3;
}

message State {
  repeated Game games = 1;
}