syntax = "proto3";

option csharp_namespace = "Larp.Proto.Mystwood5e";

package larp.mw5e;

import public "larp/mw5e/character.proto";
import public "larp/mw5e/gifts.proto";
import public "larp/mw5e/occupations.proto";
import public "larp/mw5e/other.proto";
import public "larp/mw5e/skills.proto";

message GameState {
  repeated Gift gifts = 1;
  repeated SkillDefinition skills = 2;
  repeated Occupation occupations = 3;
  repeated Vantage vantages = 4;
  repeated Religion religions = 5;
  repeated HomeChapter home_chapters = 6;
  repeated Spell spells = 7;
}